# virtual_camera

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  ci.sh  codecov.yml  package.xml
.github/workflows/: codecov_ci_action.yml  coveralls_ci_action.yml  industrial_ci_action.yml
include/virtual_camera/: image_viewer.hpp  virtual_camera.hpp
launch/: showimageraw.launch.py
scripts/: build.bash  build.bat  build.sh  change_fps.bash  generate_cov_report.bash  run.bash  run.bat  run.sh  set_input_data.bash  show_image.bash  show_image.bat  view_cov_report.bash
src/: image_viewer.cpp  virtual_camera.cpp
test/: image_viewer_test.cpp  virtual_camera_test.cpp
